--- a/app/views/tour_requests/index.html.erb
+++ b/app/views/tour_requests/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome!</h1>
 <p>Please schedule a tour. Trust me, it's worth it.</p>
-<%= render partial: 'form', locals: { tour_request: @tour_request } %>
+<%= render partial: 'new_form', locals: { tour_request: @tour_request } %>
