--- a/app/views/tour_requests/_additional_details_form.html.erb
+++ b/app/views/tour_requests/_additional_details_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for tour_request do |f| %>
+<%= form_for tour_request, url: tour_requests_additional_details_path(tour_request) do |f| %>
 
   <%= render partial: "errors", locals: { tour_request: tour_request } %>
 
