--- a/app/views/tour_requests/_additional_details_form.html.erb
+++ b/app/views/tour_requests/_additional_details_form.html.erb
@@ -2,8 +2,15 @@
 
   <%= render partial: "errors", locals: { tour_request: tour_request } %>
 
-  <%= f.label :requested_tour_date %>
-  <%= f.datetime_select :requested_tour_date %>
+  <div>
+    <%= f.label :requested_tour_date %>
+    <%= f.datetime_select :requested_tour_date %>
+  </div>
+
+  <div>
+    <%= f.label :questions %>
+    <%= f.text_area :questions %>
+  </div>
 
   <h3>Amenities</h3>
   <ul>
