Show IP in email

--- a/app/views/tour_request_mailer/new_tour.html.erb
+++ b/app/views/tour_request_mailer/new_tour.html.erb
@@ -1,2 +1,3 @@
 <h1>New Tour Deatils</h1>
+<p>IP Adress: <%= @ip_address %></p>
 <%= render partial: 'tour_requests/details', locals: { tour_request: @tour_request } %>
